# upstream_app

./: .gitignore  README.md  config.yaml  pyproject.toml
src/mini_nginx/: config_loader.py  echo_app.py  load_test.js  server.py  upstream_pool.py
src/mini_nginx/utils/: http_parser.py
